make autoresponses have arguments